# rust-practice

./: .gitignore  main.py  time_check.py  trade_data_python.csv  trade_data_rust.csv
coin_trading/: Cargo.toml
coin_trading/src/: main.rs
datatype/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/src/: main.rs
upbit/: Cargo.toml
upbit/src/: main.rs  quotation.rs  request.rs
