[package]
name = "upbit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tungstenite = "0.17"
futures-util = "0.3"
url = "2.2"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "8.1"
sha2 = "0.10"
csv = "1.1"
